# instagram-crewAI

./: README.md  desc_projeto.yaml  pyproject.toml
src/instagram_crewai/: crew.py  main.py
